--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,91 +15,134 @@ header{
   background-color: rgb(0, 0, 0);
 }
 
-h1{}
+main{
+  top: 0;
+  bottom:0;
+  position:fixed;
+  overflow-y:scroll;
+  overflow-x:hidden;
+  width: 80%;
+  margin-top: 10%;
+  margin-left: 5%;
+  padding-left: 5%;
+  padding-right: 9.5%;
+  z-index: -1;
+}
+
+footer{
+  width:100%;
+  text-align: center;
+  font-size: 120%;
+}
+
+h1{
+  font-size: 900%;
+  text-align: center;
+  padding: 0;
+}
+
 h2{}
+
 h3{}
 
-nav{}
-
-nav>a{
-  float: left;
-  background-color: black;
-  color: white;
-  text-decoration: none;
-  padding-left:2%;
-  padding-right:2%;
-  padding-top:1%;
-  padding-bottom:1.2%;
+h4{
+  font-size: 300%;
+  text-align: center;
+  padding: 0;
 }
 
-nav>a:hover{
-  background-color: #F8C928;
-  color: white;
-  text-decoration: none;
-  padding-left:2%;
-  padding-right:2%;
-  padding-top:1%;
-  padding-bottom:1.2%;
-
+h5{
+  text-align: center;
+  font-size: 150%;
 }
 
-.dropdown {
-  display: inline;
-  float: left;
-  padding-left:2%;
-  padding-right:2%;
-  padding-top:1%;
-  padding-bottom:1.1%;
+p{
+  font-size: 140%;
 }
 
-.dropdown .dropbtn {
-    border: none;
-    outline: none;
-    padding: 0;
-    font-family: monospace;
-    font-size: 105%;
-    background: none;
-    color: white;
-    text-decoration: none;
-}
+  nav{
+    position: 
+      }
 
-.dropdown:hover {
-  background-color: #F8C928;
-  color: white;
-  text-decoration: none;
-  padding-left:2%;
-  padding-right:2%;
-  padding-top:1%;
-  padding-bottom:1.1%;
-}
+        nav>a{
+          float: left;
+          background-color: black;
+          color: white;
+          text-decoration: none;
+          padding-left:2%;
+          padding-right:2%;
+          padding-top:1%;
+          padding-bottom:1.2%;
+        }
 
-.dropdown-content {
-    display: none;
-    margin-left: -2%;
-    margin-top: 1%;
-    position: absolute;
-    background-color: #f9f9f9;
-    z-index: 1;
-    width: 12.5%;
-}
+        nav>a:hover{
+          background-color: #F8C928;
+          color: white;
+          text-decoration: none;
+          padding-left:2%;
+          padding-right:2%;
+          padding-top:1%;
+          padding-bottom:1.2%;
 
-.dropdown-content a {
-    width: 100%;
-    float: none;
-    color: black;
-    padding-left:2%;
-    padding-right:2%;
-    padding-top:2%;
-    padding-bottom:2%;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
+        }
 
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
+        .dropdown {
+          display: inline;
+          float: left;
+          padding-left:2%;
+          padding-right:2%;
+          padding-top:1%;
+          padding-bottom:1.1%;
+        }
 
-.dropdown:hover .dropdown-content {
-    display: block;
-}
+        .dropdown .dropbtn {
+          border: none;
+          outline: none;
+          padding: 0;
+          font-family: monospace;
+          font-size: 105%;
+          background: none;
+          color: white;
+          text-decoration: none;
+        }
+
+        .dropdown:hover {
+          background-color: #F8C928;
+          color: white;
+          text-decoration: none;
+          padding-left:2%;
+          padding-right:2%;
+          padding-top:1%;
+          padding-bottom:1.1%;
+        }
+
+        .dropdown-content {
+          display: none;
+          margin-left: -2%;
+          margin-top: 1%;
+          position: absolute;
+          background-color: #f9f9f9;
+          width: 12.5%;
+          z-index: 10;
+        }
+
+        .dropdown-content a {
+          width: 100%;
+          float: none;
+          color: black;
+          padding-left:2%;
+          padding-right:2%;
+          padding-top:2%;
+          padding-bottom:2%;
+          text-decoration: none;
+          display: block;
+          text-align: left;
+        }
+
+        .dropdown-content a:hover {
+          background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-content {
+          display: block;
+        }
