--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -61,7 +61,7 @@ p{
 }
 
   nav{
-    position: 
+    position:
       }
 
         nav>a{
@@ -92,7 +92,9 @@ p{
           padding-left:2%;
           padding-right:2%;
           padding-top:1%;
-          padding-bottom:1.1%;
+          padding-bottom:1.2%;
+          margin-top: -0.01%;
+
         }
 
         .dropdown .dropbtn {
@@ -113,7 +115,7 @@ p{
           padding-left:2%;
           padding-right:2%;
           padding-top:1%;
-          padding-bottom:1.1%;
+          padding-bottom:1.2%;
         }
 
         .dropdown-content {
@@ -132,7 +134,7 @@ p{
           color: black;
           padding-left:2%;
           padding-right:2%;
-          padding-top:2%;
+          padding-top:1%;
           padding-bottom:2%;
           text-decoration: none;
           display: block;
