--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-  font-family: monospace;
+  font-family: "Roboto Mono";
   background-color: #393939;
   color: white;
   text-align: justify;
@@ -10,7 +10,7 @@ header{
   margin-left: -1%;
   width: 101%;
   position: fixed;
-  font-size: 200%;
+  font-size: 170%;
   text-align: center;
   background-color: rgb(0, 0, 0);
 }
@@ -32,7 +32,7 @@ main{
 footer{
   width:100%;
   text-align: center;
-  font-size: 120%;
+  font-size: 110%;
 }
 
 h1{
@@ -72,7 +72,7 @@ p{
           padding-left:2%;
           padding-right:2%;
           padding-top:1%;
-          padding-bottom:1.2%;
+          padding-bottom:1.3%;
         }
 
         nav>a:hover{
@@ -82,7 +82,7 @@ p{
           padding-left:2%;
           padding-right:2%;
           padding-top:1%;
-          padding-bottom:1.2%;
+          padding-bottom:1.3%;
 
         }
 
@@ -101,7 +101,7 @@ p{
           border: none;
           outline: none;
           padding: 0;
-          font-family: monospace;
+          font-family: "Roboto Mono";
           font-size: 105%;
           background: none;
           color: white;
