--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -39,6 +39,7 @@ h1{
   font-size: 900%;
   text-align: center;
   padding: 0;
+  z-index: 2;
 }
 
 h2{}
@@ -49,11 +50,13 @@ h4{
   font-size: 300%;
   text-align: center;
   padding: 0;
+  z-index: 2;
 }
 
 h5{
   text-align: center;
   font-size: 150%;
+  z-index: 2;
 }
 
 p{
